--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -20,45 +20,27 @@
   <body>
     <main role="main" class="container">
       <div class="row">
-        <div id="fund-piechart" class="piechart col-sm">
-          Bar Chart
+        <div class="col">
+          <div id="fund-piechart-controls" class="btn-group btn-group-toggle" data-toggle="buttons">
+            <label class="btn btn-secondary active">
+              <input type="radio" name="timespan" value="today" autocomplete="off" checked> 今日
+            </label>
+            <label class="btn btn-secondary">
+              <input type="radio" name="timespan" value="month" autocomplete="off"> 月
+            </label>
+            <label class="btn btn-secondary">
+              <input type="radio" name="timespan" value="year" autocomplete="off"> 年
+            </label>
+          </div>
+          <div id="fund-piechart" class="piechart">
+            Loading Chart...
+          </div>
         </div>
-        <div class="col-lg">
+        <div class="col">
           others
         </div>
       </div>
     </main>
-    <div id="login-modal" class="modal" role="dialog" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">登陆</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <form id="login-form">
-            <div class="modal-body">
-
-              <div class="form-group">
-                <label for="login-username">用户名</label>
-                <input type="text" class="form-control" id="login-username">
-              </div>
-              <div class="form-group">
-                <label for="login-password">密码</label>
-                <input type="password" class="form-control" id="login-password" placeholder="Password">
-              </div>
-
-
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-              <input type="submit" class="btn btn-primary" value="登陆">
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
     <script src="../assets/js/echarts.simple.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
