--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -21,6 +21,9 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col">
+          <div id="fund-piechart" class="piechart">
+            Loading Chart...
+          </div>
           <div id="fund-piechart-controls" class="btn-group btn-group-toggle" data-toggle="buttons">
             <label class="btn btn-secondary active">
               <input type="radio" name="timespan" value="today" autocomplete="off" checked> 今日
@@ -32,17 +35,14 @@
               <input type="radio" name="timespan" value="year" autocomplete="off"> 年
             </label>
           </div>
-          <div id="fund-piechart" class="piechart">
-            Loading Chart...
-          </div>
         </div>
         <div class="col">
           others
         </div>
       </div>
     </main>
-    <script src="../assets/js/echarts.simple.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="../assets/js/echarts.min.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="index.js"> </script>
 
