aggregate cash category

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -39,7 +39,50 @@
           </div>
         </div>
         <div class="col">
-          others
+          <div id="income-summary"></div>
+          <script id="income-summary-template" type="x-tmpl-mustache">
+            <ul class="list-group">
+            {{#incomeSummary}}
+              <li class="list-group-item">{{name}}: {{value}}</li>
+            {{/incomeSummary}}
+            </ul>
+          </script>
+        </div>
+        <div class="col">
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-8">
+          í ½í³Š
+        </div>
+        <div class="col-4">
+          <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+              <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">List group item heading</h5>
+                <small>3 days ago</small>
+              </div>
+              <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+              <small>Donec id elit non mi porta.</small>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+              <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">List group item heading</h5>
+                <small class="text-muted">3 days ago</small>
+              </div>
+              <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+              <small class="text-muted">Donec id elit non mi porta.</small>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+              <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">List group item heading</h5>
+                <small class="text-muted">3 days ago</small>
+              </div>
+              <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+              <small class="text-muted">Donec id elit non mi porta.</small>
+            </a>
+          </div>
         </div>
       </div>
     </main>
