--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -49,7 +49,28 @@
           </script>
         </div>
         <div class="col">
-
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">项目</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
       <div class="row">
