--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -14,6 +14,9 @@
       .piechart {
         height:400px;
       }
+      .barchart {
+        height: 400px;
+      }
     </style>
   </head>
 
@@ -75,7 +78,9 @@
       </div>
       <div class="row">
         <div class="col-8">
-          í ½í³Š
+         <div id="topupt-trend" class="barchart">
+          Loading Chart...
+          </div>
         </div>
         <div class="col-4">
           <div class="list-group">
