--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -21,7 +21,20 @@
   </head>
 
   <body>
-    <main role="main" class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/dashboard">BOSS</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a href="/management/#/project" class="nav-link">Project</a></li>
+          <li class="nav-item"><a href="/management/#/account" class="nav-link">Account</a></li>
+          <li class="nav-item"><a href="/management/#/finance" class="nav-link">Finance</a></li>
+        </ul>
+      </div>
+    </nav>
+    <main role="main" class="">
       <div class="row">
         <div class="col">
           <div id="fund-piechart" class="piechart">
