--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -28,9 +28,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a href="/management/#/project" class="nav-link">Project</a></li>
-          <li class="nav-item"><a href="/management/#/account" class="nav-link">Account</a></li>
-          <li class="nav-item"><a href="/management/#/finance" class="nav-link">Finance</a></li>
+          <li class="nav-item"><a href="/management/#/project" class="nav-link">项目管理</a></li>
+          <li class="nav-item"><a href="/management/#/account" class="nav-link">账户管理</a></li>
+          <li class="nav-item"><a href="/management/#/finance" class="nav-link">平台财务</a></li>
         </ul>
       </div>
     </nav>
