--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
     <style>
       .piechart {
         height:400px;
@@ -28,9 +28,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a href="/management/#/project" class="nav-link">项目管理</a></li>
-          <li class="nav-item"><a href="/management/#/account" class="nav-link">账户管理</a></li>
-          <li class="nav-item"><a href="/management/#/finance" class="nav-link">平台财务</a></li>
+          <li class="nav-item"><a href="/management#/project" class="nav-link">项目管理</a></li>
+          <li class="nav-item"><a href="/management#/account" class="nav-link">账户管理</a></li>
+          <li class="nav-item"><a href="/management#/finance" class="nav-link">平台财务</a></li>
         </ul>
       </div>
     </nav>
@@ -114,8 +114,8 @@
     </main>
     <script src="../assets/js/echarts.min.js"></script>
     <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/bootstrap.min.js"></script>
-    <script src="index.js"> </script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="../index.js"> </script>
 
   </body>
 </html>
