--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a href="/management#/project" class="nav-link">项目管理</a></li>
           <li class="nav-item"><a href="/management#/account" class="nav-link">账户管理</a></li>
-          <li class="nav-item"><a href="/management#/finance" class="nav-link">平台财务</a></li>
+          <li class="nav-item"><a href="/management#/banking" class="nav-link">银行审核</a></li>
+          <li class="nav-item"><a href="/management#/cashing" class="nav-link">提现审核</a></li>
         </ul>
       </div>
     </nav>
