--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
             <table class="table">
             <thead>
             <tr>
-            <th scope="col">#</th>
+            <th scope="col">序号</th>
             <th scope="col">项目</th>
             <th scope="col">金额</th>
             </tr>
@@ -79,7 +79,7 @@
             <tbody>
             {{#projectTopup}}
             <tr>
-            <th scope="row">{{index}}</th>
+            <th scope="row">{{index + 1}}</th>
             <td>{{name}}</td>
             <td>{{value}}</td>
             </tr>
