--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
             <tbody>
             {{#projectTopup}}
             <tr>
-            <th scope="row">{{index + 1}}</th>
+            <th scope="row">{{index}}</th>
             <td>{{name}}</td>
             <td>{{value}}</td>
             </tr>
