adjust layout of dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         </ul>
       </div>
     </nav>
-    <main role="main" class="">
+    <main role="main" class="container-fluid">
       <div class="row">
         <div class="col">
           <div id="fund-piechart" class="piechart">
