--- a/public/login/index.html
+++ b/public/login/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>Signin BOSS</title>
 
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
