--- a/public/login/index.html
+++ b/public/login/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
 
     <title>Signin BOSS</title>
 
@@ -15,18 +14,18 @@
 
   <body class="text-center">
     <form class="form-signin" id="form-signin">
-      <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="text" id="inputUserName" class="form-control" placeholder="Email address" required autofocus>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
+      <h1 class="h3 mb-3 font-weight-normal">登陆</h1>
+      <label for="inputEmail" class="sr-only">账号</label>
+      <input type="text" id="inputUserName" class="form-control" placeholder="账号" required autofocus>
+      <label for="inputPassword" class="sr-only">密码</label>
+      <input type="password" id="inputPassword" class="form-control" placeholder="密码" required>
       <div class="checkbox mb-3">
         <label>
-          <input id="remember-me" type="checkbox" value="remember-me"> Remember me
+          <input id="remember-me" type="checkbox" value="remember-me"> 30天免登陆
         </label>
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">登陆</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
     <script src="index.js"> </script>
